// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend should retrieve parallel findOne queries with EntityDataLoader 1`] = `
Array [
  Object {
    "email": "niccolo.belli@linuxsystems.it",
    "id": 1,
    "name": "Niccolò",
    "password": "1111",
    "picture": null,
    "sex": 0,
    "surname": "Belli",
  },
  Object {
    "email": "mario.rossi@linuxsystems.it",
    "id": 2,
    "name": "Mario",
    "password": "2222",
    "picture": null,
    "sex": 0,
    "surname": "Rossi",
  },
  Object {
    "email": "luigi.bianchi@linuxsystems.it",
    "id": 3,
    "name": "Luigi",
    "password": "3333",
    "picture": null,
    "sex": 0,
    "surname": "Bianchi",
  },
  Object {
    "email": "mattia.ferrari@linuxsystems.it",
    "id": 4,
    "name": "Mattia",
    "password": "4444",
    "picture": null,
    "sex": 0,
    "surname": "Ferrari",
  },
  Object {
    "email": "riccardo.russo@linuxsystems.it",
    "id": 5,
    "name": "Riccardo",
    "password": "5555",
    "picture": null,
    "sex": 0,
    "surname": "Russo",
  },
]
`;

exports[`Backend should retrieve parallel findOne queries with conditions on collection fields with EntityDataLoader 1`] = `
Array [
  Object {
    "creator": 1,
    "date": 2020-03-12T18:00:00.000Z,
    "id": 1,
    "partecipants": Array [
      Object {
        "email": "niccolo.belli@linuxsystems.it",
        "id": 1,
        "name": "Niccolò",
        "password": "1111",
        "picture": null,
        "sex": 0,
        "surname": "Belli",
      },
      Object {
        "email": "mario.rossi@linuxsystems.it",
        "id": 2,
        "name": "Mario",
        "password": "2222",
        "picture": null,
        "sex": 0,
        "surname": "Rossi",
      },
      Object {
        "email": "mattia.ferrari@linuxsystems.it",
        "id": 4,
        "name": "Mattia",
        "password": "4444",
        "picture": null,
        "sex": 0,
        "surname": "Ferrari",
      },
      Object {
        "email": "filippo.magi@linuxsystems.it",
        "id": 6,
        "name": "Filippo",
        "password": "6666",
        "picture": null,
        "sex": 0,
        "surname": "Magi",
      },
    ],
    "site": 1,
    "specialty": 1,
  },
  Object {
    "creator": 1,
    "date": 2020-05-20T16:30:00.000Z,
    "id": 2,
    "partecipants": Array [
      Object {
        "email": "niccolo.belli@linuxsystems.it",
        "id": 1,
        "name": "Niccolò",
        "password": "1111",
        "picture": null,
        "sex": 0,
        "surname": "Belli",
      },
      Object {
        "email": "mattia.ferrari@linuxsystems.it",
        "id": 4,
        "name": "Mattia",
        "password": "4444",
        "picture": null,
        "sex": 0,
        "surname": "Ferrari",
      },
      Object {
        "email": "sara.ricci@linuxsystems.it",
        "id": 7,
        "name": "Sara",
        "password": "7777",
        "picture": null,
        "sex": 1,
        "surname": "Ricci",
      },
      Object {
        "email": "giorgia.esposito@linuxsystems.it",
        "id": 9,
        "name": "Giorgia",
        "password": "9999",
        "picture": null,
        "sex": 1,
        "surname": "Esposito",
      },
    ],
    "site": 1,
    "specialty": 3,
  },
  Object {
    "creator": 1,
    "date": 2020-03-15T18:00:00.000Z,
    "id": 3,
    "partecipants": Array [
      Object {
        "email": "niccolo.belli@linuxsystems.it",
        "id": 1,
        "name": "Niccolò",
        "password": "1111",
        "picture": null,
        "sex": 0,
        "surname": "Belli",
      },
      Object {
        "email": "mario.rossi@linuxsystems.it",
        "id": 2,
        "name": "Mario",
        "password": "2222",
        "picture": null,
        "sex": 0,
        "surname": "Rossi",
      },
      Object {
        "email": "luigi.bianchi@linuxsystems.it",
        "id": 3,
        "name": "Luigi",
        "password": "3333",
        "picture": null,
        "sex": 0,
        "surname": "Bianchi",
      },
      Object {
        "email": "mattia.ferrari@linuxsystems.it",
        "id": 4,
        "name": "Mattia",
        "password": "4444",
        "picture": null,
        "sex": 0,
        "surname": "Ferrari",
      },
    ],
    "site": 1,
    "specialty": 1,
  },
  Object {
    "creator": 7,
    "date": 2020-03-15T18:00:00.000Z,
    "id": 5,
    "partecipants": Array [
      Object {
        "email": "sara.ricci@linuxsystems.it",
        "id": 7,
        "name": "Sara",
        "password": "7777",
        "picture": null,
        "sex": 1,
        "surname": "Ricci",
      },
      Object {
        "email": "lucia.fontana@linuxsystems.it",
        "id": 8,
        "name": "Lucia",
        "password": "8888",
        "picture": null,
        "sex": 1,
        "surname": "Fontana",
      },
      Object {
        "email": "giorgia.esposito@linuxsystems.it",
        "id": 9,
        "name": "Giorgia",
        "password": "9999",
        "picture": null,
        "sex": 1,
        "surname": "Esposito",
      },
      Object {
        "email": "claudia.recanatini@linuxsystems.it",
        "id": 10,
        "name": "Claudia",
        "password": "0000",
        "picture": null,
        "sex": 1,
        "surname": "Recanatini",
      },
    ],
    "site": 1,
    "specialty": 2,
  },
]
`;

exports[`Backend should retrieve parallel findOne queries with conditions on reference fields with EntityDataLoader 1`] = `
Array [
  Object {
    "declaredLevel": 5,
    "id": 1,
    "sport": Object {
      "id": 1,
      "name": "Beach Volley",
    },
    "user": Object {
      "email": "niccolo.belli@linuxsystems.it",
      "id": 1,
      "name": "Niccolò",
      "password": "1111",
      "picture": null,
      "sex": 0,
      "surname": "Belli",
    },
  },
  Object {
    "declaredLevel": 3,
    "id": 2,
    "sport": Object {
      "id": 1,
      "name": "Beach Volley",
    },
    "user": Object {
      "email": "mario.rossi@linuxsystems.it",
      "id": 2,
      "name": "Mario",
      "password": "2222",
      "picture": null,
      "sex": 0,
      "surname": "Rossi",
    },
  },
  Object {
    "declaredLevel": 5,
    "id": 8,
    "sport": Object {
      "id": 2,
      "name": "Beach Tennis",
    },
    "user": Object {
      "email": "luigi.bianchi@linuxsystems.it",
      "id": 3,
      "name": "Luigi",
      "password": "3333",
      "picture": null,
      "sex": 0,
      "surname": "Bianchi",
    },
  },
  Object {
    "declaredLevel": 5,
    "id": 1,
    "sport": Object {
      "id": 1,
      "name": "Beach Volley",
    },
    "user": Object {
      "email": "niccolo.belli@linuxsystems.it",
      "id": 1,
      "name": "Niccolò",
      "password": "1111",
      "picture": null,
      "sex": 0,
      "surname": "Belli",
    },
  },
  Object {
    "declaredLevel": 1,
    "id": 7,
    "sport": Object {
      "id": 2,
      "name": "Beach Tennis",
    },
    "user": Object {
      "email": "mario.rossi@linuxsystems.it",
      "id": 2,
      "name": "Mario",
      "password": "2222",
      "picture": null,
      "sex": 0,
      "surname": "Rossi",
    },
  },
  Object {
    "declaredLevel": 5,
    "id": 8,
    "sport": Object {
      "id": 2,
      "name": "Beach Tennis",
    },
    "user": Object {
      "email": "luigi.bianchi@linuxsystems.it",
      "id": 3,
      "name": "Luigi",
      "password": "3333",
      "picture": null,
      "sex": 0,
      "surname": "Bianchi",
    },
  },
]
`;
